--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </article>        
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/Locideran/Locideran" target="_blank">Gabriel Mascarenhas</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://locideran.github.io/" target="_blank">Gabriel Mascarenhas</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
